# gorkycode_residents

./: .gitignore  Caddyfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/sql/: seed.sql
backend/src/: main.py
backend/src/adapters/: ai.py  ai_openai.py  ai_protocol.py  notifier.py  repo.py  repo_protocols.py  repo_sqlalchemy.py
backend/src/api/: auth.py  complaints.py  deps.py  dto.py  tickets.py  tickets_front.py  ws.py  ws_chat.py
backend/src/core/: config.py  security.py
backend/src/db/: models.py  session.py
backend/src/di/: container.py
backend/src/dto/: auth.py  tickets.py
backend/src/protocols/: ai.py  ai_protocol.py  notifier.py  repo.py
backend/src/schemas/: complaint.py  executor_update.py
backend/src/services/: auth.py  chat.py  complaints.py  tickets.py
db/: __init__.py  base.py  config.py  models.py  schema.sql  session.py
frontend/: .dockerignore  Dockerfile  application-detail.html  docker-compose.yml  eslint.config.js  history.html  history.js  index.js  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api_service.js  application-detail.js  main.js  style.css
frontend/src/components/: Chat.tsx
frontend/src/pages/: AuthPage.tsx  LandingPage.tsx  NewTicketPage.tsx  TicketsChatListPage.tsx
