[project]
name = "lobachback"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "dishka>=1.7.2",
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.3.0",
    "pydantic[email]>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "ruff>=0.14.5",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
    "websockets>=15.0.1",
    "openai>=2.8.1",
]
